cmake_minimum_required(VERSION 3.25)
project(AlgCamp)

set(CMAKE_CXX_STANDARD 17)

#add_executable(day03 test.cpp week1/day03/day03.cpp)
#add_executable(day04 test.cpp week2/day04/day04.cpp)
#add_executable(day05 test.cpp week2/day05/day05.cpp)
#add_executable(day06 test.cpp week2/day06/day06.cpp)
#add_executable(day07 structDef/List/SqList.cpp test.cpp week2/day07/day07.cpp)
#add_executable(day08 structDef/List/SqList.cpp test.cpp week2/day08/day08.cpp)
#add_executable(day09 structDef/List/SqList.cpp test.cpp week2/day09/day09.cpp)
#add_executable(day10 structDef/List/SqList.cpp test.cpp week2/day06/day06.cpp week3/day10/day10.cpp)
#add_executable(day11 structDef/List/SqList.cpp test.cpp week3/day11/day11.cpp)
#add_executable(day12 structDef/List/SqList.cpp test.cpp week3/day12/day12.cpp)
add_executable(day13 test.cpp week3/day13/day13.cpp)