cmake_minimum_required(VERSION 3.25)
project(AlgCamp)

set(CMAKE_CXX_STANDARD 17)

#add_executable(day03 test.cpp week1/day03/day03.cpp)
#add_executable(day04 test.cpp week2/day04/day04.cpp)
#add_executable(day05 test.cpp week2/day05/day05.cpp)
#add_executable(day06 test.cpp week2/day06/day06.cpp)
#add_executable(day07 structDef/List/SqList.cpp test.cpp week2/day07/day07.cpp)
#add_executable(day08 structDef/List/SqList.cpp test.cpp week2/day08/day08.cpp)
#add_executable(day09 structDef/List/SqList.cpp test.cpp week2/day09/day09.cpp)
#add_executable(day10 structDef/List/SqList.cpp test.cpp week2/day06/day06.cpp week3/day10/day10.cpp)
#add_executable(day11 structDef/List/SqList.cpp test.cpp week3/day11/day11.cpp)
#add_executable(day12 structDef/List/SqList.cpp test.cpp week3/day12/day12.cpp)
#add_executable(day13 test.cpp week3/day13/day13.cpp)
#add_executable(day14 test.cpp week3/day14/day14.cpp)
#add_executable(day15 test.cpp week3/day15/day15.cpp)
#add_executable(day16 test.cpp week4/day16/day16.cpp)
#add_executable(day17 test.cpp week4/day17/day17.cpp)
#add_executable(day18 test.cpp week4/day18/day18.cpp)
#add_executable(day19 test.cpp week4/day19/day19.cpp)
#add_executable(day20 test.cpp week4/day20/day20.cpp)
#add_executable(day21 test.cpp week4/day21/day21.cpp)
#add_executable(day22 test.cpp week5/day22/day22.cpp)
#add_executable(day23 structDef/List/LinkList.cpp test.cpp week5/day23/day23.cpp)
#add_executable(day24 structDef/List/LinkList.cpp test.cpp week5/day24/day24.cpp)
#add_executable(day25 structDef/List/LinkList.cpp test.cpp week5/day23/day23.cpp week5/day25/day25.cpp)
add_executable(day27 structDef/List/LinkList.cpp test.cpp week5/day27/day27.cpp week5/day23/day23.cpp)
